# merge2md

./: .gitignore  README.md  demo_franchise.py  franchise_docs.md  pyproject.toml
merge2md/: __init__.py  __main__.py  converter.py  merger.py  notifier.py  utils.py
tests/: __init__.py  converter_tests.py  test_converter.py  test_init.py  test_merger.py  test_notifier.py  test_utils.py
tests/data/: test.asciidoc  test.csv  test.html  test1.md  test2.txt
