[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "merge2md"
version = "0.1.0"
description = "Convert and merge multiple documents to Markdown or PDF using Docling"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "docling>=2.12.0",
    "pypandoc>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
merge2md = "merge2md.__main__:main"

[tool.setuptools]
packages = ["merge2md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=merge2md --cov-report=term-missing"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
] 